# django_number_place

./: LICENSE  README.rst  setup.cfg  setup.py
django_number_place/: _views.pyx  apps.py  forms.py  manage.py  urls.py  views.py
django_number_place/number_place/: __init__.py  _views.pyi  _views.pyx  apps.py  builtin.h  forms.py  urls.py  views.py
django_number_place/number_place/jinja2/: 1.html  1.sub.html
django_number_place/number_place/static/: 0.css
django_number_place/number_place/templates/: 1.html  1.sub.html
django_number_place/project/: settings.py  urls.py  wsgi.py
django_number_place/static/: 1.css
django_number_place/templates/: 1.html  1.sub.html
django_number_place/templatetags/: number_place_extra.py
setup/number_place/: 1.csv  forms.py.j2  urls.py.j2  views.py.j2
