[flake8]
max-complexity = 10

[pycodestyle]
exclude = .git,build,__pycache__,venv*,TEST*,.vscode
max-line-length = 150
format = pylint
select = E711, E714, E501, W291
#ignore = W, E
ignore =
	W504,
	# W504 line break after binary operator
	S001,
	# S001 found module formatter
	E226,
	# E226 missing whitespace around operator[run]

[options]
install_requires =
	django>=3.0
	Jinja2>=2.10

[coverage:run]
branch = True
parallel = True
concurrency = multiprocessing,thread
include = ./*
source = .
#omit = Test*

[bdist_wheel]
universal = 1
